<resources>
    <string name="app_name">Stock Watch</string>
    <string name="add_stock">Add Stock</string>
    <string name="delete_note1">Delete this Stock?</string>
    <string name="delete_note2">This action cannot be undone.</string>
    <string name="negativeBtn1">Nevermind!</string>
    <string name="searchTitle">Make a selection</string>
    <string name="selectCompanies">Select Companies</string>
    <string name="searchBoxMsg">Please enter a Stock symbol:</string>
    <string name="nullSearchStringMsg">Seems, you\'ve not entered anything!</string>
    <string name="negativeBtn2">You changed your mind!</string>
    <string name="iconText">Icon</string>
    <string name="networkErrorTitle">No Network Connection</string>
    <string name="networkErrorMsg1">Stocks can not be loaded without a Network Connection </string>
    <string name="networkErrorMsg2">Stocks can not be added without a Network Connection.</string>
    <string name="duplicateErrorTitle">Duplicate Stock</string>
    <string name="noStockErrorTitle">Stock not Found.</string>
    <string name="developer">Designed and developed by Chirag Khandhar.</string>
    <string name="yearVersion">2020 | Version 1.2</string>
    <string name="powered_by">Powered By</string>
    <string name="cloud">Cloud</string>
    <string name="iex">IEX</string>
    <string name="market">Market</string>
    <string name="watch">Watch</string>
</resources>
